--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="row">
         <div class="column">
             <br/>
-            <p><strong>Tumuli is now available on Bandcamp and streaming services!</strong></p>
+            <p>Tumuli is now available on Bandcamp and streaming services!</p>
 
             <p>Curated from an extensive back catalog of tracks, this is the debut release from Scott Metoyer.</p>
 
