--- a/index.html
+++ b/index.html
@@ -1,47 +1,110 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
+  <meta charset="utf-8">
+  <title>Scott Metoyer</title>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta content="" name="keywords">
+  <meta content="" name="description">
 
-    <title>Scott Metoyer - Tumuli</title>
-    <meta name="description" content="Scott Metoyer - Tumuli">
-    <meta name="author" content="Scott Metoyer">
-    <link rel="stylesheet" href="https://use.typekit.net/met0zuu.css">
-    <link rel="stylesheet" href="css/styles.css?v=1.1">
+  <!-- Favicons -->
+  <link href="img/favicon.ico" rel="icon">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Oswald:400,300,700|EB+Garamond" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Tajawal&display=swap" rel="stylesheet">
+
+  <!-- Bootstrap CSS File -->
+  <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Libraries CSS Files -->
+  <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+
+  <!-- Main Stylesheet File -->
+  <link href="css/icomoon.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
+
 </head>
 
-<body>
+<body data-spy="scroll" data-offset="0" data-target="#theMenu">
 
-    <div class="row">
-        <div class="column">
-            <br/>
-            <p>Tumuli is now available on Bandcamp and streaming services!</p>
+  <!-- Menu -->
 
-            <p>Curated from an extensive back catalog of tracks, this is the debut release from Scott Metoyer.</p>
 
-            <p>Featuring glitchy IDM beats and timeless melodies, Tumuli is a callback to classic IDM of the 90s. Fans
-                of Boards of Canada, Plaid, and Aphex Twin will not be disappointed.</p>
-
-            <p><iframe seamless="" src="https://bandcamp.com/EmbeddedPlayer/album=3738346550/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/artwork=small/transparent=true/"
-                    style="border: 0; width: 100%; height: 120px;">Tumuli by Scott Metoyer</iframe></p>
-
-            <p>
-                <a href="https://open.spotify.com/album/7smQdYPn2It91lhdNI03U7" target="_blank"><img width="200" alt="Spotify"
-                        data-entity-type="file" data-entity-uuid="54fdd4aa-cdc2-430d-aa2b-09f9574cd2cc" src="images/listen_on_spotify-black.png"/></a>
-
-            <br/><a href="https://www.deezer.com/us/album/78078162" target="_blank"><img alt="Deezer" width="200" data-entity-type="file"
-                        data-entity-uuid="aea9f4dc-ef71-4e18-b9f6-4dfe2af4d123" src="images/deezer.png"/></a></p>
-
+  <!-- ========== HEADER SECTION ========== -->
+  <section id="home" name="home"></section>
+  <div id="headerwrap">
+    <div class="container">
+      <div class="logo">
+        <img src="img/logo-bright.svg">
+      </div>
+      <br>
+      <div class="row">
+        <h1>SCOTT METOYER</h1>
+        <br>
+        <div class="col-lg-6 col-lg-offset-3">
+          <ul class="ftco-footer-social list-unstyled mt-4">
+            <li><a href="https://scottmetoyer.bandcamp.com/"><span class="icon-bandcamp"></span></a></li>
+            <li><a href="https://twitter.com/smetoyermusic"><span class="icon-twitter"></span></a></li>
+            <li><a href="https://www.facebook.com/smetoyermusic/"><span class="icon-facebook"></span></a></li>
+            <li><a href="https://www.instagram.com/scottmetoyermusic/?hl=en"><span class="icon-instagram"></span></a>
+            </li>
+            <li><a href="https://soundcloud.com/scott-metoyer"><span class="icon-soundcloud"></span></a></li>
+            <li><a href="https://www.youtube.com/channel/UCoYU5pAPePPrfShrb3oM1rQ?view_as=subscriber"><span
+                  class="icon-youtube"></span></a></li>
+            <li><a href="https://github.com/scottmetoyer"><span class="icon-github"></span></a></li>
+          </ul>
         </div>
-        <div class="column">
-            <img class="fluid" src="images/tumuli.jpg" alt="Tumuli" />
-        </div>
+      </div>
     </div>
+    <!-- /container -->
+  </div>
+  <!-- /headerwrap -->
+
+  <!-- ========== ABOUT SECTION ========== -->
+  <section id="about" name="about"></section>
+  <div id="f">
+    <div class="container">
+      <div class="row">
+        <p class="centered"><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i
+            class="icon icon-circle"></i></p>
+
+        <!-- INTRO INFORMATIO-->
+        <div class="col-lg-6 col-lg-offset-3">
+          <p>Scott Metoyer is an electronic musician, experimenter, software developer, and visual creator from
+            Southern California.</p>
+          <p>His work lies at the intersection of the concrete and the abstract, using technical
+            tools and processes to create evocative and cinematic soundscapes.</p>
+          <p>Scott uses a combination of modular synthesis, bespoke software, Reaktor, Max, PureData, and custom
+            controller hardware. He self releases projects on <a href="https://scottmetoyer.bandcamp.com/">Bandcamp</a>
+            and has many open source projects available on
+            <a href="https://github.com/scottmetoyer">Github</a>.</p>
+        </div>
+      </div>
+    </div>
+    <!-- /container -->
+  </div>
+  <!-- /f -->
 
 
-    <script src="js/scripts.js"></script>
+
+  <div id="copyrights">
+    <div class="container">
+      <p>
+        &copy; Copyright <strong>Scott Metoyer</strong>. All Rights Reserved
+      </p>
+    </div>
+  </div>
+
+  <!-- JavaScript Libraries -->
+  <script src="lib/jquery/jquery.min.js"></script>
+  <script src="lib/bootstrap/js/bootstrap.min.js"></script>
+  <script src="lib/easing/easing.min.js"></script>
+
+  <!-- Template Main Javascript File -->
+  <script src="js/main.js"></script>
+
 </body>
 
 </html>
